# openpgp-did

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/: dependency-security.md  design.md  e2e-did-web-credential.md
examples/: unsigned-credential.json
src/: main.rs
src/cli/: app.rs  cli.rs  cmd_card.rs  cmd_did.rs  cmd_ssi.rs  config.rs  create_did.rs  mod.rs  utils.rs
src/crypto/: key.rs  mod.rs  smart_card.rs
src/smart_card/: mod.rs  openpgp.rs  pcsc.rs  scdaemon.rs
src/smart_card/scdaemon/: agent.rs
src/ssi/: mod.rs  safe_web.rs  verification.rs
