[package]
name = "openpgp-did"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
base64 = "0.22.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = "4.6.1"
dirs = "6.0.0"
flate2 = "1.0.26"
iref = "2.2.3"
openpgp-card = "0.6.1"
card-backend = "0.2.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
ssi = "0.6.0"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }
